--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
                 <div class="container">
                     <div class="hero-inner">
                         <div class="hero-copy">
-                            <h1 class="hero-title mt-0">Landing template for startups</h1>
-                            <p class="hero-paragraph">Our landing page template works on all devices, so you only have
-                                to set it up once, and get beautiful results forever.</p>
+                            <h1 class="hero-title mt-0">Hai bisogno di un template originale?</h1>
+                            <p class="hero-paragraph">Da noi puoi trovare quello che cerchi , prova uno dei nostri 
+                                templete free oppure abbonati e avrai tantissimi vantaggi!!
+                            </p>
                             <div class="hero-cta"><a class="button button-primary" href="preorder.html">Pre order
                                     now</a><a class="button" href="#">Get in touch</a></div>
                         </div>
