--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="container">
                     <div class="hero-inner">
                         <div class="hero-copy">
-                            <h1 class="hero-title mt-0">Hai bisogno di un template originale?</h1>
+                            <h1 class="hero-title mt-0">We di un template originale?</h1>
                             <p class="hero-paragraph">Da noi puoi trovare quello che cerchi , prova uno dei nostri<br> 
                                 templete free oppure abbonati e avrai tantissimi vantaggi!!
                             </p>
