--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <div class="container">
                     <div class="hero-inner">
                         <div class="hero-copy">
-                            <h1 class="hero-title mt-0">We di un template originale?</h1>
-                            <p class="hero-paragraph">Da noi puoi trovare quello che cerchi , prova uno dei nostri<br> 
+                            <h1 class="hero-title mt-0">Hai bisogno di un template originale?</h1>
+                            <p class="hero-paragraph">Da noi puoi trovare quello che cerchi , prova uno dei nostri
                                 templete free oppure abbonati e avrai tantissimi vantaggi!!
                             </p>
                             <div class="hero-cta"><a class="button button-primary" href="preorder.html">Pre order
