--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                             <p class="hero-paragraph">Da noi puoi trovare quello che cerchi , prova uno dei nostri
                                 templete free oppure abbonati e avrai tantissimi vantaggi!!
                             </p>
-                            <div class="hero-cta"><a class="button button-primary" href="preorder.html">Pre order
-                                    now</a><a class="button" href="#">Get in touch</a></div>
+                            <div class="hero-cta"><a class="button button-primary" href="preorder.html">Abbonati originale</a>
+                                <a class="button" href="#">Scopri di più</a></div>
                         </div>
                         <div class="hero-figure anime-element">
                             <svg class="placeholder" width="528" height="396" viewBox="0 0 528 396">
