--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <p class="hero-paragraph">Da noi puoi trovare quello che cerchi , prova uno dei nostri
                                 templete free oppure abbonati e avrai tantissimi vantaggi!!
                             </p>
-                            <div class="hero-cta"><a class="button button-primary" href="preorder.html">Abbonati originale</a>
+                            <div class="hero-cta"><a class="button button-primary" href="preorder.html">Abbonati ora</a>
                                 <a class="button" href="#">Scopri di più</a></div>
                         </div>
                         <div class="hero-figure anime-element">
