--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <p class="hero-paragraph">Da noi puoi trovare quello che cerchi , prova uno dei nostri
                                 templete free oppure abbonati e avrai tantissimi vantaggi!!
                             </p>
-                            <div class="hero-cta"><a class="button button-primary" href="preorder.html">Abbonati ora</a>
+                            <div class="hero-cta"><a id="preorder-top" class="button button-primary" href="preorder.html">Abbonati ora</a>
                                 <a class="button" href="#">Scopri di più</a></div>
                         </div>
                         <div class="hero-figure anime-element">
@@ -184,7 +184,7 @@
                                         </ul>
                                     </div>
                                     <div class="pricing-table-cta mb-8">
-                                        <a class="button button-primary button-shadow button-block" href="#">Pre order
+                                        <a id="preorder-bottom" class="button button-primary button-shadow button-block" href="#">Pre order
                                             now</a>
                                     </div>
                                 </div>
