--- a/index.html
+++ b/index.html
@@ -184,8 +184,7 @@
                                         </ul>
                                     </div>
                                     <div class="pricing-table-cta mb-8">
-                                        <a id="preorder-bottom" class="button button-primary button-shadow button-block" href="#">Pre order
-                                            now</a>
+                                        <a id="preorder-bottom" class="button button-primary button-shadow button-block" href="#">Pre order now</a>
                                     </div>
                                 </div>
                             </div>
