--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                 templete free oppure abbonati e avrai tantissimi vantaggi!!
                             </p>
                             <div class="hero-cta"><a id="preorder-top" class="button button-primary" href="preorder.html">Abbonati ora</a>
-                                <a class="button" href="#">Scopri di più</a></div>
+                                <a id="info-top" class="button" href="#">Scopri di più</a></div>
                         </div>
                         <div class="hero-figure anime-element">
                             <svg class="placeholder" width="528" height="396" viewBox="0 0 528 396">
